--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -58,26 +58,104 @@ input::placeholder {
     margin-left: auto;
 }
 
-.main {
-    width: 85%;
-    margin: 0 auto;
-    padding: 2.5rem 0;
-}
-
-.flash_message {
+.flash-message {
     text-align: center;
     background-color: #477efe;
     padding: 0.25rem 0;
     color: #fff;
 }
 
-.error {
+.error-massage {
     margin-top: 0.5rem;
     text-align: left;
     color: #ff5555;
 }
 
-.no-results__text {
+.result-massage {
     text-align: center;
     color: #ff5555
+}
+
+/* ヘッダー */
+.header {
+    justify-content: space-between;
+    height: 3.5rem;
+    padding: 0 10rem;
+    background-color: #000000;
+    color: #ffffff;
+}
+
+.header-logo {
+    width: auto;
+    height: 1.7rem;
+    transform: scaleY(0.9);
+}
+
+.header-nav__item-btn--link{
+    background: none;
+    border: none;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s;
+}
+
+.header-nav__item-link--btn{
+    display: inline-block;
+    background-color: #ffffff;
+    color: #000000;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    border-radius: 0.25rem;
+    text-align: center;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease, transform 0.2s;
+}
+
+.header-nav__item:hover,
+.header-nav__item-btn--link:hover {
+    color: #477efe;
+    transform: scale(1.1);
+}
+
+.header-nav__item-link--btn:hover {
+    background-color: #477efe;
+    color: #ffffff;
+    transform: scale(1.1);
+}
+
+.header-nav li:not(:last-child) {
+    margin-right: 2rem;
+}
+
+#search-form input[type="text"] {
+    width: 25rem;
+    background-color: #ffffff;
+    padding: 0.5rem;
+    font-size: 0.8rem;
+    border: none;
+    border-radius: 0.3rem;
+}
+
+#search-results {
+    padding: 0.6rem;
+    text-align: center;
+    color: #ff5555;
+}
+
+/* ハンバーガーメニュー */
+.hamburger-menu {
+    display: none;
+}
+
+.menu {
+    display: none;
+}
+
+.main {
+    width: 85%;
+    margin: 0 auto;
+    padding: 2.5rem 0;
 }
