プロフィール・住所登録画面追加

--- a/src/public/css/auth/auth-form.css
+++ b/src/public/css/auth/auth-form.css
@@ -22,7 +22,7 @@
     padding: 1.5rem 0;
 }
 
-.auth-form__group-text {
+.auth-form__group-label {
     font-weight: bold;
     text-align: left;
 }
