--- a/src/public/css/responsive.css
+++ b/src/public/css/responsive.css
@@ -1,10 +1,3 @@
-@media screen and (max-width: 1280px) {
-
-    .header {
-        padding: 0 2rem;
-    }
-}
-
 @media screen and (max-width: 959px) {
 
     .header-nav {
@@ -78,7 +71,7 @@
         color: #ffffff;
         text-decoration: none;
         display: block;
-        margin-bottom: 2rem;
+        margin: 2rem 0;
     }
 
     .menu__item-btn--link {
@@ -86,7 +79,7 @@
         border: none;
         color: #ffffff;
         text-decoration: none;
-        padding: 0;
+        margin-top: 2rem;
         cursor: pointer;
         transition: background-color 0.3s ease, transform 0.2s;
     }
@@ -114,6 +107,16 @@
         background-color: #308dd6;
         color: #ffffff;
         transform: scale(1.1);
+    }
+
+    .item-tab:first-child {
+        margin-left: 1rem;
+    }
+
+    .item {
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 1rem;
+        grid-row-gap: 1.5rem;
     }
 
     .main {
@@ -195,6 +198,15 @@
     }
 
     .main-range {
+        width: 85%;
         margin: 3.5rem auto;
+        padding: 2.5rem 0;
     }
+
+    .item {
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 1rem;
+        grid-row-gap: 1.5rem;
+    }
+
 }
