--- a/src/public/css/responsive.css
+++ b/src/public/css/responsive.css
@@ -113,7 +113,13 @@
         margin-left: 1rem;
     }
 
-    .item {
+    #items-list .item {
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 1rem;
+        grid-row-gap: 1.5rem;
+    }
+
+    #search-results .item {
         grid-template-columns: repeat(4, 1fr);
         grid-column-gap: 1rem;
         grid-row-gap: 1.5rem;
@@ -203,7 +209,13 @@
         padding: 2.5rem 0;
     }
 
-    .item {
+    #items-list .item {
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 1rem;
+        grid-row-gap: 1.5rem;
+    }
+
+    #search-results .item {
         grid-template-columns: repeat(2, 1fr);
         grid-column-gap: 1rem;
         grid-row-gap: 1.5rem;
