--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -11,12 +11,11 @@ html {
 html,
 body {
     background-color: #ffffff;
-    width: 100vw;
-    min-height: 100vh;
-    font-family: "Helvetica Neue", Helvetica, Arial, Verdana, Roboto, "游ゴシック",
-        "Yu Gothic", "游ゴシック体", "YuGothic", "ヒラギノ角ゴ Pro W3",
-        "Hiragino Kaku Gothic Pro", "Meiryo UI", "メイリオ", Meiryo,
-        "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+        width: 100vw;
+        min-height: 100vh;
+        font-family: "Helvetica Neue", "Arial", "游ゴシック", "Yu Gothic", "メイリオ", "Meiryo", "MS PGothic", sans-serif;
+        font-size: 1rem;
+        line-height: 1.5;
 }
 
 img {
@@ -64,7 +63,7 @@ input::placeholder {
     margin-top: 3.5rem;
     padding: 1rem 0;
     color: #fff;
-    opacity: 0,7;
+    opacity: 0.7;
 }
 
 .error-message {
@@ -110,13 +109,26 @@ input::placeholder {
     transform: scale(1.1);
 }
 
+.header-nav__item {
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+.header-nav__item a {
+    font-size: 1rem;
+    line-height: 1.5;
+    transition: background-color 0.3s ease, transform 0.2s;
+}
+
 .header-nav__item-btn--link{
     background: none;
     border: none;
     color: #ffffff;
     text-decoration: none;
-    padding: 0;
     cursor: pointer;
+    font-size: 1rem;
+    line-height: 1.5;
+    transform: scale(1);
     transition: background-color 0.3s ease, transform 0.2s;
 }
 
@@ -150,7 +162,7 @@ input::placeholder {
 }
 
 #search-form input[type="text"] {
-    width: 25rem;
+    width: 20rem;
     background-color: #ffffff;
     padding: 0.5rem;
     font-size: 0.8rem;
@@ -194,4 +206,24 @@ input::placeholder {
 .btn:hover {
     opacity: 0.5;
     transform: scale(1.1);
+}
+
+.edit-btn {
+    /* width: 10rem; */
+    white-space: nowrap;
+    padding: 0.5rem 1rem;
+    text-align: center;
+    background-color: #ffffff;
+    color: #ff5555;
+    font-weight: bold;
+    border: 0.15rem solid #ff5555;
+    border-radius: 0.6rem;
+    cursor: pointer;
+}
+
+.edit-btn:hover {
+    background-color: #ff5555;
+    color: #ffffff;
+    border: 0.15rem solid #ffffff;
+    transform: 0.5s;
 }
