--- a/src/public/css/responsive.css
+++ b/src/public/css/responsive.css
@@ -80,6 +80,7 @@
         color: #ffffff;
         text-decoration: none;
         margin-top: 2rem;
+        font-size: 1rem;
         cursor: pointer;
         transition: background-color 0.3s ease, transform 0.2s;
     }
@@ -110,13 +111,13 @@
     }
 
     .item-tabs {
-        justify-content: center;
-        padding: 0;
+        /* justify-content: center; */
+        padding: 0 8rem;
     }
 
-    .item-tab {
-        margin-right: 0rem;
-    }
+    /* .item-tab { */
+        /* margin-right: 0rem; */
+    /* } */
 
     .item-tab:first-child {
         margin-left: 0rem;
@@ -253,6 +254,19 @@
         padding: 2.5rem 0;
     }
 
+        .item-tabs {
+            justify-content: center;
+            padding: 0;
+        }
+
+        .item-tab {
+            margin-right: 0rem;
+        }
+
+    .item-tab:first-child {
+        margin-left: 0rem;
+    }
+
     #items-list .item {
         grid-template-columns: repeat(2, 1fr);
         grid-column-gap: 1rem;
@@ -272,4 +286,6 @@
     .mypage-profile__image {
         padding: 0;
     }
+
+        
 }
